// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for listType: ordered and orderType: alphabetically 1`] = `
"::slotted(*) {
  --pds-text-list-item-ordered-suffix: "";
  --pds-text-list-item-unordered-width: 0.5rem;
  --pds-text-list-item-unordered-height: 1px;
  --pds-text-list-item-unordered-top: calc(1.5em / 2);
}
:host {
  position: relative !important;
  display: list-item !important;
  color: inherit !important;
  list-style-type: none !important;
  padding-left: 2.5rem !important;
}
:host:before {
  position: absolute !important;
  left: 0 !important;
  content: counters(section,".",lower-latin) var(--pds-text-list-item-ordered-suffix,".") !important;
  top: 0 !important;
  width: 1.5rem !important;
  height: auto !important;
  counter-increment: section !important;
  text-align: right !important;
  background-color: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-size-adjust: none !important;
  -webkit-text-size-adjust: none !important;
  overflow-wrap: break-word !important;
  hyphens: auto !important;
}"
`;

exports[`getComponentCss() should return correct css for listType: ordered and orderType: numbered 1`] = `
"::slotted(*) {
  --pds-text-list-item-ordered-suffix: "";
  --pds-text-list-item-unordered-width: 0.5rem;
  --pds-text-list-item-unordered-height: 1px;
  --pds-text-list-item-unordered-top: calc(1.5em / 2);
}
:host {
  position: relative !important;
  display: list-item !important;
  color: inherit !important;
  list-style-type: none !important;
  padding-left: 2.5rem !important;
}
:host:before {
  position: absolute !important;
  left: 0 !important;
  content: counters(section,".",decimal) var(--pds-text-list-item-ordered-suffix,".") !important;
  top: 0 !important;
  width: 1.5rem !important;
  height: auto !important;
  counter-increment: section !important;
  text-align: right !important;
  background-color: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-size-adjust: none !important;
  -webkit-text-size-adjust: none !important;
  overflow-wrap: break-word !important;
  hyphens: auto !important;
}"
`;

exports[`getComponentCss() should return correct css for listType: unordered and orderType: alphabetically 1`] = `
"::slotted(*) {
  --pds-text-list-item-ordered-suffix: "";
  --pds-text-list-item-unordered-width: 0.5rem;
  --pds-text-list-item-unordered-height: 1px;
  --pds-text-list-item-unordered-top: calc(1.5em / 2);
}
:host {
  position: relative !important;
  display: list-item !important;
  color: inherit !important;
  list-style-type: none !important;
  padding-left: 1.5rem !important;
}
:host:before {
  position: absolute !important;
  left: 0 !important;
  content: "" !important;
  width: var(--pds-text-list-item-unordered-width,0.25rem) !important;
  height: var(--pds-text-list-item-unordered-height,0.25rem) !important;
  top: var(--pds-text-list-item-unordered-top,calc(1.5em / 2 - 0.125em)) !important;
  background-color: currentColor !important;
}"
`;

exports[`getComponentCss() should return correct css for listType: unordered and orderType: numbered 1`] = `
"::slotted(*) {
  --pds-text-list-item-ordered-suffix: "";
  --pds-text-list-item-unordered-width: 0.5rem;
  --pds-text-list-item-unordered-height: 1px;
  --pds-text-list-item-unordered-top: calc(1.5em / 2);
}
:host {
  position: relative !important;
  display: list-item !important;
  color: inherit !important;
  list-style-type: none !important;
  padding-left: 1.5rem !important;
}
:host:before {
  position: absolute !important;
  left: 0 !important;
  content: "" !important;
  width: var(--pds-text-list-item-unordered-width,0.25rem) !important;
  height: var(--pds-text-list-item-unordered-height,0.25rem) !important;
  top: var(--pds-text-list-item-unordered-top,calc(1.5em / 2 - 0.125em)) !important;
  background-color: currentColor !important;
}"
`;
